# IPML2d

./: README.md
L-system inference/: CMakeLists.txt  README.md
L-system inference/L-systems-examples/: ijgi-fig8-3-expansion.l  moutain-0-expansion.l  our-0-koc.l  our-branch-1.l  our-branch-10.l  our-branch-11.l  our-branch-12.l  our-branch-13.l  our-branch-14.l  our-branch-15.l  our-branch-16.l  our-branch-17.l  our-branch-18.l  our-branch-19.l  our-branch-2.l  our-branch-3.l  our-branch-4.l  our-branch-5.l  our-branch-6.l  our-branch-7.l  our-branch-8.l  our-branch-9.l  our-branch-random-1.l  our-branch-random-10.l  our-branch-random-11.l  our-branch-random-12.l  our-branch-random-2.l  our-branch-random-3.l  our-branch-random-4.l  our-branch-random-5.l  our-branch-random-6.l  our-branch-random-7-examples.l  our-branch-random-7.l  our-branch-random-7_forTraining.l  our-branch-random-8.l  our-branch-random-9.l  our-branch-random-ForTraining.l  our-koch_curve.l  our-koch_snowflake.l  our-pattern-1.l  (+5 more)
L-system inference/resource/: mainwindow.ui
L-system inference/src/: PerlinNoise.hpp  SuffixTree.h  global_definations.h  glviewer.cpp  glviewer.h  io.cpp  lsystem.cpp  lsystem.h  main.cpp  patterns.h  scene.h  tree_structure.cpp  tree_structure.h  turtle.cpp  turtle.h  window.cpp  window.h
L-system inference/src/R2/: R2.h  R2Distance.cpp  R2Distance.h  R2Image.cpp  R2Line.cpp  R2Line.h  R2Pixel.cpp  R2Point.cpp  R2Point.h  R2Segment.cpp  R2Segment.h  R2Vector.cpp  R2Vector.h
L-system inference/src/R3/: R3.h  R3Box.cpp  R3Box.h  R3Distance.cpp  R3Distance.h  R3Line.cpp  R3Line.h  R3Matrix.cpp  R3Matrix.h  R3Plane.cpp  R3Plane.h  R3Point.cpp  R3Point.h  R3Ray.cpp  R3Ray.h  R3Segment.cpp  R3Segment.h  R3Vector.cpp  R3Vector.h
L-system inference/test-examples/: b1-000053.txt  b1-000136.txt  b1-000137.txt  b13-000029.txt  b13-000029_line.txt  b8-000167.txt  complex11-000004.txt  ps4-000089.txt  ps4-000159.txt  shu-36-01.txt  shu-46-01.txt  sketch-9-0.txt
L-system inference/test-examples/more/: 0-cgTree-0-01.txt  11-0.txt  24-1.txt  b1-000001.txt  b1-000035.txt  b1-000053-2.txt  b1-000063.txt  b1-000071.txt  b1-000083.txt  b1-000111.txt  b1-000119.txt  b1-000143.txt  b1-000153.txt  b1-000173.txt  b13-000023.txt  b13-000029.txt  b3-000045.txt  b3-000076.txt  b3-000087.txt  b3-000112.txt  b3-000124.txt  b3-000146.txt  b4-000035.txt  b4-000071.txt  b4-000107.txt  b4-000143.txt  b5-000076.txt  b5-000082.txt  b5-000089.txt  b5-000093.txt  b5-000101.txt  b5-000107.txt  b8-000100.txt  b8-000153.txt  b8-000179.txt  b8-000191.txt  b8-000215.txt  effect_resolution_1-3.txt  fern1-1-01.txt  ijgi-fig11-0.txt  (+91 more)
Neural detector/: README.md
Neural detector/data/io/: read_tfrecord.py  txt2xml.py  txt2xml_test.py
Neural detector/help_utils/: tools.py
Neural detector/libs/box_utils/: draw_box_in_img.py
Neural detector/libs/configs/: cfgs.py  cfgs_twoClass.py
Neural detector/libs/label_name_dict/: label_dict.py  label_dict_twoClass.py
Neural detector/libs/networks/: build_whole_network.py
Neural detector/libs/val_libs/: voc_eval.py  voc_eval_r.py
Neural detector/tools/: eval.py  inference.py
